Login > UI fixes - username and password input was not aligned properly on large screen Dashboard > UI fixes - extra border was showing for physician link input GotoMeeting - bug fixes in saving refresh token Layout - Removed timer component for logout angular.json - added commonjs dependencies

--- a/resources/frontend2/src/app/features/dashboard/dashboard-home/dashboard-home.component.scss
+++ b/resources/frontend2/src/app/features/dashboard/dashboard-home/dashboard-home.component.scss
@@ -49,6 +49,10 @@ app-patient-queue {
     }
 
     .mat-form-field-outline-gap {
+      border-width: 0px;
+    }
+
+    .mat-form-field-outline-gap {
       border: 2px solid currentColor;
       border-left-style: none;
       border-right-style: none;
